# vela

./: .env.example  .gitignore  AGENTS.md  BRANDING.md  Dockerfile  Dockerfile.api  Dockerfile.mcp  LICENSE  README.md  alembic.ini  docker-compose.yml  mcp-config-example.json  pyproject.toml
alembic/: env.py
examples/: README.md
examples/python/langchain/: README.md  agent.py  pyproject.toml  test_workflow.py
examples/python/mcp-fastmcp/: README.md  pyproject.toml  server.py
examples/ts/langchain/: README.md  agent.ts  package-lock.json  (+2 more)
schemas/: SCHEMA_REFERENCE.md  WORKFLOW_LOGIC.md  agent.schema.yaml  resource.schema.yaml  workflow.schema.yaml
scripts/: docker-entrypoint.sh  test_mcp_client.py
src/api/: __init__.py  app.py
src/mcp/: __init__.py  module_registry.py  server.py
src/shared/: __init__.py
tests/: conftest.py  test_agent_module.py  test_context_module.py  test_elicitation.py  test_github_api_service.py  test_github_api_write.py  test_health.py  test_loader_recursive.py  test_local_module_provider.py  test_mcp_orchestrator.py  test_memory_module.py  test_module_filter.py  test_module_filter_middleware.py  test_module_hub_module.py  test_module_registry_service.py  test_module_singleton.py  test_module_source_repository.py  test_module_write_tools.py  test_repositories.py  test_resource_loader.py  test_resource_module.py  test_resource_workflow_integration.py  test_tool_discovery.py  test_tool_requirements.py  test_vela_module.py  test_vela_workflows.py  test_workflow_composition.py  test_workflow_engine.py  test_workflow_loader.py  test_workflow_module.py  test_workflow_module_registry_integration.py
tests/api/: conftest.py  test_health.py  test_workflows.py
(+87 files in other folders)
