[project]
name = "vela"
version = "0.1.0"
description = "Vela MCP Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0.0b1",
    "mcp[cli]>=1.26.0",
    "fastapi>=0.109.0",
    "starlette",
    "uvicorn",
    "pydantic[email]>=2.0",
    # Database & ORM
    "sqlalchemy[asyncio]>=2.0",
    "aiomysql>=0.2.0",
    "pymysql>=1.1.0",
    "alembic>=1.13.0",
    "aiosqlite>=0.21.0",
    # Monitoring
    "sentry-sdk>=1.40.0",
    # Logging
    "structlog>=23.2.0",
    # Utilities
    "python-dotenv>=1.0.0",
    # YAML
    "pyyaml>=6.0",
    # SDK
    "vela-sdk[all]",
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "B", "Q"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.uv.workspace]
members = [
    "packages/vela-sdk",
]

[tool.uv.sources]
vela-sdk = { workspace = true, editable = true }

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
